--- a/src/Content/Css/common.css
+++ b/src/Content/Css/common.css
@@ -56,3 +56,97 @@ button:hover span {
 .hide{
   visibility: hidden;
 }
+.full-img{
+  display: block;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.preload-container
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #000;
+  opacity: 0.5;
+  z-index: 999;
+}
+.preload-container.fixed{
+  position: fixed;
+}
+.preload-container.transparent{
+  background: transparent;
+}
+.preloader{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+.preloader.default{
+  width: 150px;
+  height: 150px;
+}
+.preloader.medium{
+  width: 100px;
+  height: 100px;
+}
+.preloader.small{
+  width: 50px;
+  height: 50px;
+}
+.preloader.small .circle-2,
+.preloader.small .circle-3{
+  display: none;
+}
+.preloader.small .circle-1{
+  border-top-color: #444;
+  border-width: 3;
+  animation-duration: 1s;
+}
+.preloader .circles{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.preloader .circle{
+  position: absolute;
+  border-radius: 50%;
+  border-width: 2px;
+  border-color: transparent;
+  border-style: solid;
+}
+.preloader .circle-1{
+  left: 0;
+  top : 0;
+  right: 0;
+  bottom: 0;
+  border-top-color: #FF0000;
+  animation: spin 1.5s linear infinite;
+}
+.preloader .circle-2{
+  left: 10%;
+  top : 10%;
+  right: 10%;
+  bottom: 10%;
+  border-top-color: #A60000;
+  animation: spin 1s linear infinite;
+}
+.preloader .circle-3{
+  left: 20%;
+  top : 20%;
+  right: 20%;
+  bottom: 20%;
+  border-top-color: #BF3030;
+  animation: spin .5s linear infinite;
+}
+@keyframes spin{
+  from{
+    transform: rotate(0deg)
+  }
+  to{
+    transform: rotate(360deg)
+  }
+}
