--- a/src/Content/Css/components/Gallery/PhotoGrid.css
+++ b/src/Content/Css/components/Gallery/PhotoGrid.css
@@ -6,14 +6,14 @@
 
 .PhotoGrid .GridElement{
     position: relative;
-    display: inline-block;
+    float: left;
     padding: 20px;
     box-sizing: border-box;
     width: 31.333333%;
     background: #f9f9f9;
     margin: 20px 1%;
     box-shadow: -4px 2px 10px rgba(0,0,0,.4);
-    height: 250px;
+    height: 300px;
 }
 .PhotoGrid .GridElement.add-photo{
     padding: 30px;
