--- a/src/Content/Css/components/Slider.css
+++ b/src/Content/Css/components/Slider.css
@@ -1,60 +1,96 @@
 .Slider{
-    cursor: pointer;
-    margin: 0 auto;
-    background: #e8e6e5;
-    padding: 20px;
-    padding-bottom: 60px;
-    box-shadow: 0px -2px 10px rgba(0,0,0,.5) inset;
-    overflow: hidden;
+  margin: 20px 20px;
+  box-shadow: 1px -2px 10px rgba(0,0,0,.3);
+  position: relative;
 }
-.Slider .slide{
-    position: relative;
-    width: 800px;
-    margin: 0 auto;
-    padding-bottom: 20px;
-    height: 450px;
+.Slider .slide {
+  position: relative;
+  height: 730px;
 }
-.Slider img{
-    opacity: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    box-shadow: 10px 8px 20px rgba(0,0,0,.5);
+.Slider div.slide-image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.Slider img.active{
-    display: block;
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
+.Slider .controls-block{
+  transition: opacity .5s ease-in-out;
 }
-.Slider .controls{
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0px;
-    background: #333;
-    opacity: 0.8;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding: 4px 0;
+.Slider .controls-block.active{
+  opacity: 1;
 }
-.Slider .controls button{
-    box-sizing: border-box;
-    background : #ccc;
-    opacity: 0.3;
-    border-radius: 50%;
-    transition: opacity 0.7s ease-in-out;
-    width: 25px;
-    height: 25px;
-    margin: 0 5px;
-    box-shadow: 1px 1px 5px rgba(0,0,0,.5);
+.Slider .controls-block{
+  opacity: 0;
 }
-.Slider .controls button:hover{
-    opacity: 0.5;
-    box-shadow: -1px 1px 5px rgba(0,0,0,.8) inset;
+.Slider .controls {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 140px;
+  text-align: center;
 }
-.Slider .controls button.active{
-    opacity: 0.1;
+.Slider .buttons {
+  display: inline-block;
+}
+.Slider .controls button {
+  cursor: default;
+  box-shadow: none;
+  opacity: 0.9;
+  transition: all 0.7s ease-in-out;
+  padding: 0;
+  margin: 0 5px;
+  position: relative;
+  width: 36px;
+  height: 40px;
+}
+.Slider .controls button::after {
+  position: absolute;
+  left: 0;
+  top: 20px;
+  content: "";
+  width: 0;
+  border-top: 20px solid #000;
+  border-right: 18px solid transparent;
+  border-left: 18px solid transparent;
+}
+.Slider .controls button::before {
+  position: absolute;
+  left: 0;
+  top: 0px;
+  content: "";
+  width: 0;
+  border-bottom: 20px solid #000;
+  border-right: 18px solid transparent;
+  border-left: 18px solid transparent;
+}
+
+.Slider .controls button.active {
+  opacity: 0.5;
+}
+.Slider .slide .right,
+.Slider .slide .left {
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position-y: 50%;
+  background-size: 110%;
+  cursor: pointer;
+  opacity: 0.6;
+  z-index: 2;
+}
+.Slider .slide .right.enable,
+.Slider .slide .left.enable {
+  opacity: 0.9;
+}
+.Slider .slide .right {
+  top: 0;
+  right: 0;
+}
+.Slider .slide .left {
+  top: 0;
+  left: 0;
 }
