--- a/src/Content/Css/components/Slider.css
+++ b/src/Content/Css/components/Slider.css
@@ -2,20 +2,36 @@
   box-sizing: border-box;
 }
 .Slider {
-  padding: 20px;
-  margin: 20px 20px;
+  padding: 10px;
+  margin: 20px 0;
   box-shadow: 1px -2px 10px rgba(0, 0, 0, 0.3);
   position: relative;
-  vertical-align: top;
+}
+.Slider .slides{
+  position: relative;
+  height: 100%;  
+  transition: left 1s ease-in-out;
+  left: 0;
+  top : 0;
+}
+.Slider .slide-image{
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .Slider .slide {
   position: relative;
   float: left;
   height: 600px;
   width: 70%;
+  overflow: hidden;
 }
+
 .Slider .content{
-  padding: 20px;
+  padding: 0 10px;
   float : left;
   width: 30%;
 }
@@ -23,65 +39,14 @@
   margin: 0;
   border-bottom: 1px solid #ccc;
 }
-.Slider div.slide-image {
-  position: relative;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.Slider .controls-block {
-  transition: opacity 0.5s ease-in-out;
-}
-.Slider .controls-block.active {
-  visibility: visible;
-}
-.Slider .controls-block {
-  visibility: visible;
-}
+
 .Slider .controls {
   position: absolute;
   left: 0;
   right: 0;
   bottom: 140px;
   text-align: center;
-}
-.Slider .buttons {
-  display: inline-block;
-}
-.Slider .controls button {
-  cursor: default;
-  box-shadow: none;
-  opacity: 0.9;
-  transition: all 0.7s ease-in-out;
-  padding: 0;
-  margin: 0 5px;
-  position: relative;
-  width: 36px;
-  height: 40px;
-}
-.Slider .controls button::after {
-  position: absolute;
-  left: 0;
-  top: 20px;
-  content: "";
-  width: 0;
-  border-top: 20px solid #000;
-  border-right: 18px solid transparent;
-  border-left: 18px solid transparent;
-}
-.Slider .controls button::before {
-  position: absolute;
-  left: 0;
-  top: 0px;
-  content: "";
-  width: 0;
-  border-bottom: 20px solid #000;
-  border-right: 18px solid transparent;
-  border-left: 18px solid transparent;
-}
-
-.Slider .controls button.active {
-  opacity: 0.5;
+  z-index: 1;
 }
 .Slider .slide .right,
 .Slider .slide .left {
@@ -92,12 +57,11 @@
   background-position-y: 50%;
   background-size: 110%;
   cursor: pointer;
-  opacity: 0.6;
   z-index: 2;
 }
-.Slider .slide .right.enable,
-.Slider .slide .left.enable {
-  opacity: 0.9;
+.Slider .slide .right.disabled,
+.Slider .slide .left.disabled {
+  opacity: 0.6;
 }
 .Slider .slide .right {
   top: 0;
