--- a/src/Content/Css/components/Book.css
+++ b/src/Content/Css/components/Book.css
@@ -1,10 +1,25 @@
 .book-wrapper{
-  height: 500px;
   position: relative;
-  overflow: hidden;
 }
 .Book {
-  height: 100%;
+  background: #e8e6e5;
+  position: relative;
+  display: flex;
+}
+.Book > nav {
+  box-sizing: border-box;
+  border-right: 1px solid #ccc;
+  flex: 25%;
+  padding: 20px;
+  background: #fff;
+  box-shadow: 1px -1px 10px rgba(0,0,0,.5) inset;
+}
+
+.Book > section {
+  flex: 75%;
+  position: relative;
+  padding: 20px;
+  box-sizing: border-box;
 }
 .Book h1 {
   margin: 0;
@@ -39,7 +54,7 @@
 }
 .Book nav .clear-button{
   position: absolute;
-  right: 10px;
+  right: -10px;
   top: 25px;
   transform: translateY(-50%);
   width: 25px;
@@ -59,13 +74,9 @@
   border: 0;
   font-size: 1.4em;
   outline: none;
-  border-bottom: 2px dashed #ccc;
+  border-bottom: 1px dashed #ccc;
   background: inherit;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 10px;
-  top: 80px;
+  height: 440px;
 }
 .Book nav li:hover {
   color: rgb(61, 60, 59);
@@ -77,22 +88,4 @@
   margin: 0;
   padding: 0;
 }
-.Book > nav {
-  box-sizing: border-box;
-  border-right: 1px solid #ccc;
-  width: 400px;
-  float: left;
-  height: 100%;
-  padding: 20px;
-  background: #fff;
-  box-shadow: 1px -1px 10px rgba(0,0,0,.5) inset;
-}
 
-.Book > section {
-  position: relative;
-  padding: 20px;
-  box-sizing: border-box;
-  margin-left: 400px;
-  background: #e8e6e5;
-  height: 100%;
-}
