--- a/src/Content/Css/components/Gallery/Photo.css
+++ b/src/Content/Css/components/Gallery/Photo.css
@@ -10,35 +10,38 @@
 }
 .Photo {
     position: fixed;
-    left: 20%;
-    top: 100px;
-    width: 60%;
-    height: 500px;
+    left: 50vw;    
+    top : 50%;
+    transform: translate(-50%,-50%);
+    width: 900px;
+    height: 560px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .Photo .left{
-    left: 0;
+    left: -100px;
+    background-image: url('/static/media/ic_chevron_left_48px.svg');
 }
 .Photo .right{
-    right: 0;
+    right: -100px;
+    background-image: url('/static/media/ic_chevron_right_48px.svg');
 }
 .Photo .left, .Photo .right{
     position: absolute;
     top: 0;
     bottom: 0;
     width: 100px;
-    background: #000;
     cursor: pointer;
-    opacity: 0.06;
     transition: opacity .5s ease-in-out;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    transition: opacity .6s ease-in-out;
 }
 .Photo .left:hover, .Photo .right:hover{
-    opacity: 0.8;
+    opacity: 0.5;
 }
-.Photo img{
-    display: block;
-    width: 100%;
-    height: 100%;
-}
+
 .Photo button{
     position: absolute;
     right: -48px;
