--- a/src/Content/Css/components/Header.css
+++ b/src/Content/Css/components/Header.css
@@ -1,44 +1,54 @@
 .Header{
     position: relative;
-}
-.Header h1{
-    display: inline-block;
-    text-align: center;
-    color: #b5b2b1;
-    width: 400px;
-    vertical-align: top;
-}
-.Header .logo{
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-.Header .head{
     padding: 20px;
 }
-.Header nav{
+
+.Header h1{
+    position: absolute;
+    color: #b5b2b1;
+    padding: 0;
     margin: 0;
-    border-bottom: 1px solid #ccc;
+    top: 20px;
+    left: 25%;
+    text-transform: capitalize;
+    animation: header-slide .5s ease-in-out;
+    font-size: 2em;
 }
-.Header nav ul{
-    margin: 0;
-   
-}
-.Header nav li{
-    padding: 5px;
-    list-style: none;
+.Header .logo{
+    width: 120px;
+    height: 120px;
     display: inline-block;
-    margin: 10px 10px;
-    border:1px solid #a7a7a7;
-    border-radius: 5px;
-    box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+    background-size: cover;
+    background-repeat: no-repeat;
+    animation: header-slide .7s ease-in-out;
 }
-.Header nav a{
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #444;
-    text-shadow:0px 1px 0px #fff;
-    outline: none;
+
+.Header .logo img{
+    width: 100%;
+    height: 100%;
+}
+.Header .links{
+    position: absolute;
+    bottom: 20px;
+    right: 0;
+    padding: 0 100px;
+}
+.Header .links figure{
+    display: inline-block;
+    background-size: cover;
+    width: 30px;
+    height: 30px;
+}
+.Header .links span{
+    display: inline-block;
+}
+.Header .links a{
+}
+@keyframes header-slide{
+    from{
+        transform: translateX(-100%);
+    }
+    to{
+        transform: translateX(0)
+    }
 }
