--- a/src/Content/Css/components/Passport.css
+++ b/src/Content/Css/components/Passport.css
@@ -1,14 +1,14 @@
 .Passport {
     padding: 20px;
     text-align: center;
-    margin: 20px 0;
+    margin: 0;
     box-shadow: 1px -2px 10px rgba(0,0,0,.3);
 }
 .Passport .pass-block{
     width: 300px;
     display: inline-block;
     box-shadow: 1px 2px 10px rgba(0,0,0,.5);
-    margin: 0 20px;
+    margin: 20px 20px;
 }
 .pass-block h3{
     border-bottom: 1px solid #000;
@@ -24,5 +24,4 @@
     display: block;
     font-weight: bold;
     font-size: 1.2em;
-    text-shadow: 3px 3px 1px rgba(0,0,0,.3);
 }
